# HW14_FastAPI_final

./: .env_example  docker-compose.yml  main.py  pyproject.toml  sql_app.db  test.db
alembic/: env.py
alembic/versions/: 31ae435340ec_init.py  8af05a62363e_init.py
documentation/: conf.py
documentation/_build/doctrees/: environment.pickle  index.doctree
documentation/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/_build/html/_sources/: index.rst.txt
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16393  16394  16396  16397  16398  16399  16401  16408  16410  16412  16415  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: conn_to_db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  upload_avatar.py
tests/: conftest.py  test_unit_rep_contacts.py
