[tool.poetry]
name = "hw-fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Artem <atlas.monker@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_fastapi_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.13"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.7"}
libgravatar = "^1.0.4"
passlib = "^1.7.4"
python-jose = {extras = ["cryptograhy"], version = "^3.3.0"}
bcrypt = "^4.0.1"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
